# hallucination_detector

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  PLAN.md  README.md  badschema.json  batch.txt  coverage.xml  pyproject.toml  rules.json  schema.json  test.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  metrics.yml  pages.yml
blog/: 2025-09-20-how-i-detect-ai-agent-failures.md
docs/: architecture.md  evaluation.md
examples/: README.md  custom_detector.py  json_schema_validation.py  logical_fallacies.py
scripts/: fetch_metrics.py
site/: index.html
site/js/: app.js
src/hallucination_detector/: __init__.py  _detector_new.py  cli.py  detector.py  registry.py
tests/: conftest.py  test_cli.py  test_cli_help.py  test_cli_helpers.py  test_cli_inprocess.py  test_cli_inprocess_more.py  test_cli_inprocess_schema.py  test_cli_schema.py  test_cli_schema_more.py  test_detection_order.py  test_detector.py  test_detector_more.py  test_edge_cases.py  test_numeric_claims.py  test_registry.py  test_registry_invalid.py  test_registry_more.py  test_schema.py  test_schema_cache.py
