[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hallucination-detector"
version = "0.0.1"
description = "Lightweight detection and remediation layer for AI agent hallucinations"
authors = [{name="Abdulwahab Omira"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
  "black",
  "isort",
]
schema = [
  "jsonschema>=4.0",
]

[project.scripts]
hd = "hallucination_detector.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
skip-string-normalization = false
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["hallucination_detector"]
default_section = "THIRDPARTY"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
check_untyped_defs = true
no_implicit_optional = true
pretty = true
show_error_codes = true
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = ["jsonschema", "jsonschema.*", "pytest"]
ignore_missing_imports = true
